--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>File System</title>
+        <title>Generic Tree</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
+    	<div class="box">
+    	</div>
+    	<script src="jquery.js"></script>
         <script src="tree.js"></script>
+        <script src="script.js"></script>
     </body>
 </html>
