--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-    	<div class="box">
-    	</div>
-    	<script src="jquery.js"></script>
+        <input type ="text">
+        <div class="box">
+        </div>
+        <script src="jquery.js"></script>
         <script src="tree.js"></script>
         <script src="script.js"></script>
     </body>
