modified UI, helpbox, display by level

--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
     </head>
     <body>
         <input type ="text">
-        <div class="box">
+        <div class="box"></div>
+        <div class="helpbox">
+            <h1>Commands:</h1>
+            <p>insert value parent</p>
+            <p>remove value</p>
+            <p>search value</p>
+            <p>display</p>
+            <p></br>* when adding first node (root): insert value</p>
         </div>
         <script src="jquery.js"></script>
         <script src="tree.js"></script>
