edit file, rename, delete, copy, move

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
         <script src="jquery.js"></script>
         <script src="tree.js"></script>
+        <script src="file-system.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
