initial integration with filesystem, create file, create folder

--- a/index.html
+++ b/index.html
@@ -9,26 +9,15 @@
             <div class="header">
                 <input type="text" name="address-bar" class="bar">
                 <input type="text" name="search-bar" class="bar">
-                <button id="new-button">New</button>
+                <button id="new-folder-button" class="new-button">New Folder</button>
+                <button id="new-file-button" class="new-button">New File</button>
             </div>
             <div class="contents">
-                <div class="box"><p>Folder One</p></div>
-                <div class="box"><p>Folder Two</p></div>
-                <div class="box"><p>Folder Three</p></div>
-                <div class="box"><p>File One</p></div>
-                <div class="box"><p>File Two</p></div>
-                <div class="box"><p>File Three</p></div>
-                <div class="box"><p>Folder Four</p></div>
-                <div class="box"><p>Folder Five</p></div>
-                <div class="box"><p>Folder Six</p></div>
-                <div class="box"><p>File Four</p></div>
-                <div class="box"><p>File Five</p></div>
-                <div class="box"><p>File Six</p></div>
             </div>
         </div>
         <script src="jquery.js"></script>
         <script src="tree.js"></script>
         <script src="file-system.js"></script>
-        <script src="script.js"></script>
+        <script src="application.js"></script>
     </body>
 </html>
