added back button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
         <div class="window">
             <div class="header">
+                <button id="back-button" class="back-button">Back</button>
                 <input type="text" name="address-bar" class="bar">
                 <input type="text" name="search-bar" class="bar">
                 <button id="new-folder-button" class="new-button">New Folder</button>
