implemented editor for new file, edit file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,15 @@
                 <button id="new-folder-button" class="new-button">New Folder</button>
                 <button id="new-file-button" class="new-button">New File</button>
             </div>
-            <div class="contents">
+            <div class="contents"> </div>
+            <div class="editor"> 
+                <div class="editor-header">
+                    <input type="text" name="file-title">
+                    <button id="close-button"> Close </button>
+                </div>
+                <div class="editor-text">
+                    <textarea name="file-content"></textarea>
+                </div>
             </div>
         </div>
         <script src="jquery.js"></script>
