search without regex, used paths instead of names

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
                 <button id="new-folder-button" class="new-button">New Folder</button>
                 <button id="new-file-button" class="new-button">New File</button>
             </div>
-            <div class="contents"> </div>
+            <button id="exit-search-button">Exit Search</button>
+            <div class="contents"> 
+            </div>
             <div class="editor"> 
                 <div class="editor-header">
                     <input type="text" name="file-title">
