--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <button id="new-file-button" class="new-button">New File</button>
             </div>
             <button id="exit-search-button">Exit Search</button>
+            <div class="rename">Rename</div>
             <div class="contents"> 
             </div>
             <div class="editor"> 
