--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>File System</title>
         <link rel="stylesheet" href="style.css">
     </head>
